force-app/main/default/objects/Recommendation/fields/OM_Family__c.field-meta.xml
<CustomField>
    <fullName>OM_Family__c</fullName>
    <label>Familia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>