force-app/main/default/objects/Recommendation/fields/OM_OptionalDocs__c.field-meta.xml
<CustomField>
    <fullName>OM_OptionalDocs__c</fullName>
    <description>Contiene la información de los documentos opcionales separados por una coma.</description>
    <inlineHelpText>Contiene la información de los documentos opcionales separados por una coma.</inlineHelpText>
    <label>Documentos Opcionales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>