force-app/main/default/objects/Recommendation/fields/OM_Product__c.field-meta.xml
<CustomField>
    <fullName>OM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>