force-app/main/default/objects/Recommendation/fields/OM_RequiredDocs__c.field-meta.xml
<CustomField>
    <fullName>OM_RequiredDocs__c</fullName>
    <description>Contiene la información de los documentos obligatorios separados por una coma.</description>
    <inlineHelpText>Contiene la información de los documentos obligatorios separados por una coma.</inlineHelpText>
    <label>Documentos Obligatorios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>