force-app/main/default/objects/Recommendation/fields/OM_TextInfo__c.field-meta.xml
<CustomField>
    <fullName>OM_TextInfo__c</fullName>
    <label>Texto informativo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>