force-app/main/default/objects/Recommendation/recordTypes/OM_Documents.recordType-meta.xml
<RecordType>
    <fullName>OM_Documents</fullName>
    <active>true</active>
    <label>Documents</label>
</RecordType>