force-app/main/default/objects/Recommendation/recordTypes/OM_Products.recordType-meta.xml
<RecordType>
    <fullName>OM_Products</fullName>
    <active>true</active>
    <label>Products</label>
</RecordType>