force-app/main/default/objects/Recommendation/listViews/OM_Documents.listView-meta.xml
<ListView>
    <fullName>OM_Documents</fullName>
    <columns>Name</columns>
    <columns>Description</columns>
    <columns>OM_Family__c</columns>
    <columns>OM_TextInfo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OM_RTDevName__c</field>
        <operation>equals</operation>
        <value>OM_Documents</value>
    </filters>
    <label>Documentos recomendados</label>
</ListView>